--- a/myDemoGit.ipynb
+++ b/myDemoGit.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "myDemoGit.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO5g2D4dOsffqdkR4c9Hcja",
+      "authorship_tag": "ABX9TyOOoun6Jg+3w7ucSQkJvenW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -53,10 +53,33 @@
     {
       "cell_type": "code",
       "source": [
+        "print(\"second time to say hello\")"
+      ],
+      "metadata": {
+        "id": "4qGj63ZaJ5Sy",
+        "outputId": "7af52890-41d2-439d-aeda-daea445ff799",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "second time to say hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "4qGj63ZaJ5Sy"
+        "id": "WxscMEKXKh59"
       },
       "execution_count": null,
       "outputs": []
